添加些注释，在加入分布式事务atomikos前，同步一次

--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -33,6 +33,7 @@
 			<div class="clear"> </div>
 	<div class="avtar">
 		<img src="images/Loginimage/avtar.png" />
+		<span>哈哈哈哈</span>
 	</div>
 			<form>
 					<input type="text" class="text" value="用户名" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}" >
