部署到服务器，vue地址改为服务器地址

--- a/WebRoot/web/vue/movieVue.html
+++ b/WebRoot/web/vue/movieVue.html
@@ -88,7 +88,7 @@ var vm = new Vue({
     			  page:this.currentPage,
     			  pageSize:this.pageSize
     	  };
-    	  this.$http.post("http://127.0.0.1:8083/AnewB/elasticsearch/queryMovie",p,{emulateJSON:true}).then(function (res){
+    	  this.$http.post("http://www.ihih.club:8088/AnewB/elasticsearch/queryMovie",p,{emulateJSON:true}).then(function (res){
     		  console.info(res);
     		  _this.tableData=res.body;
     	  })
