--- a/WebRoot/web/vue/movieVue.html
+++ b/WebRoot/web/vue/movieVue.html
@@ -7,6 +7,7 @@
 </head>
 <script src="https://cdn.bootcss.com/vue/2.3.4/vue.min.js"></script>
 <script src="https://cdn.bootcss.com/vue-resource/1.3.4/vue-resource.min.js"></script>
+<script src="https://cdn.bootcss.com/axios/0.16.2/axios.js"></script>
 <script src="https://cdn.bootcss.com/element-ui/1.3.7/index.js"></script>
 <link href="https://cdn.bootcss.com/element-ui/1.3.7/theme-default/index.css" rel="stylesheet">
 
@@ -74,7 +75,7 @@ var vm = new Vue({
       multipleSelection: [],
       currentPage: 1,
       pageSize:10,
-      name:null
+      name:''
     },
 	
     mounted: function(){
@@ -89,10 +90,39 @@ var vm = new Vue({
     			  page:this.currentPage,
     			  pageSize:this.pageSize
     	  };
+        /*
     	  this.$http.post("http://www.ihih.club:8088/AnewB/elasticsearch/queryMovie",p,{emulateJSON:true}).then(function (res){
     		  console.info(res);
     		  _this.tableData=res.body;
-    	  })
+    	  });
+        */ 
+        /*
+        axios.get('http://127.0.0.1:8083/AnewB/elasticsearch/queryMovie',{
+          params: p
+        })
+        .then(function (res) {
+          console.info(res);
+    		  _this.tableData=res.data;
+        })
+        .catch(function (error) {
+          console.log(error);
+        });
+        */
+        /*axios - Using application/x-www-form-urlencoded format*/
+        var params = new URLSearchParams();
+        params.append('name', this.name);
+        params.append('page', this.currentPage);
+        params.append('pageSize', this.pageSize);
+
+        axios.post('http://www.ihih.club:8088/AnewB/elasticsearch/queryMovie',params)
+        .then(function (res) {
+          console.info(res);
+    		  _this.tableData=res.data;
+        })
+        .catch(function (error) {
+          console.log(error);
+        });
+         
       },
       handleCurrentChange(val) {
         this.currentRow = val;
